

class Cospel {
    int ranuras;
    bool validarCospel();
};