#include "bebida.hpp"
#include "string"

using namespace std;

class Lata {
    Bebida bebida;
    std::string detalle;
    Lata solicitarLata(Lata);
};